--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# local data
+/data
+
 # intellij
-.idea
+/.idea
 
 # package-lock
-package-lock
+/package-lock
 
 # dependencies
 /node_modules
